# termuxkit-app

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml  debug_build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/termux/app/: RunCommandService.kt  TermuxActivity.kt  TermuxApplication.kt  TermuxInstaller.kt  TermuxOpenReceiver.kt  TermuxService.kt
app/src/main/java/com/termux/filepicker/: TermuxDocumentsProvider.kt
app/src/main/java/com/termux/shared/: TermuxConstants.kt
app/src/main/java/com/termux/terminal/: JNI.kt  Logger.kt  TerminalBuffer.kt  TerminalColors.kt  TerminalEmulator.kt  TerminalOutput.kt  TerminalRow.kt  TerminalSession.kt  TextStyle.kt
app/src/main/jni/: Android.mk  Application.mk  termux-exec.c  termux.c
app/src/main/res/drawable/: ic_terminal.xml
app/src/main/res/layout/: activity_termux.xml
app/src/main/res/menu/: bottom_navigation_menu.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
core/: build.gradle
rust_engine/: Cargo.toml
rust_engine/.cargo/: config.toml
rust_engine/src/: lib.rs
terminal-emulator/: build.gradle
terminal-emulator/src/main/java/com/termux/terminal/: ByteQueue.kt  JNI.kt  KeyHandler.kt  TerminalColorScheme.kt  TerminalEmulator.kt  TerminalOutput.kt  TerminalRow.kt  TerminalSession.kt  TerminalSessionClient.kt  TextStyle.kt  (+1 more)
terminal-view/: build.gradle
termux-shared/: build.gradle
ui/: build.gradle
(+172 files in other folders)
