[package]
name = "termux-rust-engine"
version = "0.2.0"
edition = "2021"
authors = ["Alpa TermuxKit Team"]
description = "Terminal Engine for Alpa TermuxKit - PTY I/O"

[lib]
name = "termux_rust_engine"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
jni = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
